--- a/java-react-webapp/package.json
+++ b/java-react-webapp/package.json
@@ -40,6 +40,7 @@
   },
   "scripts": {
     "make": "grunt",
+    "build": "grunt build",
     "test": "grunt test",
     "start": "grunt start"
   }
