--- a/java-react-webapp/pom.xml
+++ b/java-react-webapp/pom.xml
@@ -62,20 +62,7 @@
                         <configuration>
                             <arguments>
                                 <argument>run-script</argument>
-                                <argument>build</argument>
-                            </arguments>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>npm-test</id>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <phase>test</phase>
-                        <configuration>
-                            <arguments>
-                                <argument>run-script</argument>
-                                <argument>test</argument>
+                                <argument>make</argument>
                             </arguments>
                         </configuration>
                     </execution>
