--- a/java-react-webapp/package.json
+++ b/java-react-webapp/package.json
@@ -39,9 +39,6 @@
     "react-dom": "15.4.1"
   },
   "scripts": {
-    "make": "grunt",
-    "build": "grunt build",
-    "test": "grunt test",
-    "start": "grunt start"
+    "make": "grunt"
   }
 }
