--- a/java-react-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/java-react-webapp/src/main/webapp/WEB-INF/web.xml
@@ -5,13 +5,13 @@
          version="3.1">
 
     <servlet>
-        <servlet-name>HelloServlet</servlet-name>
-        <servlet-class>com.github.freongrr.grunt.java.HelloServlet</servlet-class>
+        <servlet-name>AppServlet</servlet-name>
+        <servlet-class>com.github.freongrr.grunt.java.AppServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
     </servlet>
-
     <servlet-mapping>
-        <servlet-name>HelloServlet</servlet-name>
-        <url-pattern>/hello</url-pattern>
+        <servlet-name>AppServlet</servlet-name>
+        <url-pattern>/users</url-pattern>
     </servlet-mapping>
 
     <welcome-file-list>
