--- a/java-react-webapp/package.json
+++ b/java-react-webapp/package.json
@@ -23,19 +23,17 @@
     "grunt": "1.0.1",
     "grunt-browserify": "5.0.0",
     "grunt-contrib-clean": "1.0.0",
-    "grunt-contrib-compress": "1.3.0",
     "grunt-contrib-copy": "1.0.0",
     "grunt-contrib-jshint": "1.1.0",
+    "grunt-contrib-uglify": "2.0.0",
     "grunt-contrib-watch": "1.0.0",
     "grunt-eslint": "19.0.0",
     "grunt-flowbin": "0.1.6",
-    "grunt-http-server": "2.0.0",
     "grunt-mocha-istanbul": "5.0.2",
     "istanbul": "1.0.0-alpha.2",
     "mocha": "3.2.0",
     "react": "15.4.1",
     "react-addons-test-utils": "15.4.1",
-    "react-addons-update": "15.4.1",
     "react-bootstrap": "0.30.7",
     "react-dom": "15.4.1",
     "when": "3.7.7"
