--- a/react-bootstrap-webapp/package.json
+++ b/react-bootstrap-webapp/package.json
@@ -7,7 +7,7 @@
     "email": "fabien.cortina@gmail.com"
   },
   "devDependencies": {
-    "babel-eslint": "^7.1.1",
+    "babel-eslint": "7.1.1",
     "babel-plugin-transform-class-properties": "6.19.0",
     "babel-plugin-transform-flow-strip-types": "6.21.0",
     "babel-preset-es2015": "6.18.0",
@@ -16,7 +16,7 @@
     "babelify": "7.3.0",
     "bootstrap": "3.3.7",
     "chai": "3.5.0",
-    "enzyme": "2.6.0",
+    "enzyme": "2.7.0",
     "eslint": "3.12.2",
     "eslint-plugin-react": "6.8.0",
     "flow-bin": "0.37.4",
@@ -26,6 +26,7 @@
     "grunt-contrib-compress": "1.3.0",
     "grunt-contrib-copy": "1.0.0",
     "grunt-contrib-jshint": "1.1.0",
+    "grunt-contrib-uglify": "2.0.0",
     "grunt-contrib-watch": "1.0.0",
     "grunt-eslint": "19.0.0",
     "grunt-flowbin": "0.1.6",
